--- a/tvappweb/package.json
+++ b/tvappweb/package.json
@@ -21,6 +21,7 @@
     "next-transpile-modules": "^8.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
+    "react-gtm-module": "^2.0.11",
     "react-native-svg": "11.0.1",
     "react-native-web": "^0.17.1",
     "shared": "^1.0.0",
